--- a/contact-us.html
+++ b/contact-us.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Contact Us</title>
+	<style type="text/css">
+		button {
+			background: green;
+			border: none;
+			border-radius: 3px;
+			color: white;
+			padding: 10px 20px;
+			cursor: pointer;
+		}
+	</style>
 </head>
 <body>
 	<a href="index.html">Home</a>
@@ -10,14 +20,11 @@
 	<a href="tour-packages.html">Tour Packages</a>
 	<a href="travel-tips.html">Travelling Tips</a>
 
-	<h1>Contact Us Page</h1>
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	</p>
+	<h1>Contact Us</h1>
+	<p>Building 33, Third Floor,</p>
+	<p>San Chaung Township, Yangon,</p>
+	<p>Republic of the Union of Myanmar</p>
+
+	<button>Call Us</button>
 </body>
 </html>
