--- a/contact-us.html
+++ b/contact-us.html
@@ -2,29 +2,66 @@
 <html>
 <head>
 	<title>Contact Us</title>
-	<style type="text/css">
-		button {
-			background: green;
-			border: none;
-			border-radius: 3px;
-			color: white;
-			padding: 10px 20px;
-			cursor: pointer;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<a href="index.html">Home</a>
-	<a href="about.html">About Us</a>
-	<a href="contact-us.html">Contact Us</a>
-	<a href="tour-packages.html">Tour Packages</a>
-	<a href="travel-tips.html">Travelling Tips</a>
+	<!-- Logo -->
+	<div class="logo">
+		<img src="logo.png">
+	</div>
 
-	<h1>Contact Us</h1>
-	<p>Building 33, Third Floor,</p>
-	<p>San Chaung Township, Yangon,</p>
-	<p>Republic of the Union of Myanmar</p>
+	<!-- Navigation Bar -->
+	<div class="navigation">
+		<ul class="list-inline">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="contact-us.html">Contact Us</a></li>
+			<li><a href="tour-packages.html">Tour Packages</a></li>
+			<li><a href="travel-tips.html">Travelling Tips</a></li>
+		</ul>
+	</div>
 
-	<button>Call Us</button>
+	<!-- Content -->
+	<div class="content">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8">
+					<h1>Contact Us</h1>
+					<p>Building 33, Third Floor,</p>
+					<p>San Chaung Township, Yangon,</p>
+					<p>Republic of the Union of Myanmar</p>
+
+					<button class="btn btn-success">Call Us</button>
+				</div>
+
+				<div class="col-md-4">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<!-- Footer -->
+	<div class="footer">
+		<p>Copyright © to Htet Wai Yan Soe 2016 - 2017</p>
+	</div>
+
 </body>
 </html>
