--- a/tour-packages.html
+++ b/tour-packages.html
@@ -2,47 +2,69 @@
 <html>
 <head>
 	<title>Tour Packages</title>
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<a href="index.html">Home</a>
-	<a href="about.html">About Us</a>
-	<a href="contact-us.html">Contact Us</a>
-	<a href="tour-packages.html">Tour Packages</a>
-	<a href="travel-tips.html">Travelling Tips</a>
+	<!-- Logo -->
+	<div class="logo">
+		<img src="logo.png">
+	</div>
 
-	<h1>Tour Packages</h1>
-	<table border="1">
-		<thead>
-			<tr>
-				<th>Destination</th>
-				<th>Duration</th>
-				<th>Price</th>
-				<th>Pax</th>
-			</tr>
-		</thead>
+	<!-- Navigation Bar -->
+	<div class="navigation">
+		<ul class="list-inline">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="contact-us.html">Contact Us</a></li>
+			<li><a href="tour-packages.html">Tour Packages</a></li>
+			<li><a href="travel-tips.html">Travelling Tips</a></li>
+		</ul>
+	</div>
+	
+	<!-- Content -->
+	<div class="content">
+		<div class="container">
+			<h1>Tour Packages</h1>
+			<table class="table table-bordered">
+				<thead>
+					<tr>
+						<th>Destination</th>
+						<th>Duration</th>
+						<th>Price</th>
+						<th>Pax</th>
+					</tr>
+				</thead>
 
-		<tbody>
-			<tr>
-				<td>Yangon - Mandalay</td>
-				<td>10</td>
-				<td>$1000</td>
-				<td>2</td>
-			</tr>
+				<tbody>
+					<tr>
+						<td>Yangon - Mandalay</td>
+						<td>10</td>
+						<td>$1000</td>
+						<td>2</td>
+					</tr>
 
-			<tr>
-				<td>Yangon - Bagan</td>
-				<td>10</td>
-				<td>$2000</td>
-				<td>1</td>
-			</tr>
+					<tr>
+						<td>Yangon - Bagan</td>
+						<td>10</td>
+						<td>$2000</td>
+						<td>1</td>
+					</tr>
 
-			<tr>
-				<td>Yangon - Monywa</td>
-				<td>3</td>
-				<td>$200</td>
-				<td>1</td>
-			</tr>
-		</tbody>
-	</table>
+					<tr>
+						<td>Yangon - Monywa</td>
+						<td>3</td>
+						<td>$200</td>
+						<td>1</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+	
+	<!-- Footer -->
+	<div class="footer">
+		<p>Copyright © to Htet Wai Yan Soe 2016 - 2017</p>
+	</div>
 </body>
 </html>
