--- a/travel-tips.html
+++ b/travel-tips.html
@@ -2,22 +2,68 @@
 <html>
 <head>
 	<title>Travelling Tips</title>
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<a href="index.html">Home</a>
-	<a href="about.html">About Us</a>
-	<a href="contact-us.html">Contact Us</a>
-	<a href="tour-packages.html">Tour Packages</a>
-	<a href="travel-tips.html">Travelling Tips</a>
+	<!-- Logo -->
+	<div class="logo">
+		<img src="logo.png">
+	</div>
 
-	<h1>Travelling Tips</h1>
-	<ul>
-		<li>Don't Wear shoe to Pagoda.</li>
-		<li>Use local currency</li>
-		<li>Take money out at the atm</li>
-		<li>Apply for a myanmar evisa online</li>
-		<li>Buy a local myanmar sim card</li>
-		<li>Avoid night buses</li>
-	</ul>
+	<!-- Navigation Bar -->
+	<div class="navigation">
+		<ul class="list-inline">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="contact-us.html">Contact Us</a></li>
+			<li><a href="tour-packages.html">Tour Packages</a></li>
+			<li><a href="travel-tips.html">Travelling Tips</a></li>
+		</ul>
+	</div>
+	
+	<!-- Content -->
+	<div class="content">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8">
+					<h1>Travelling Tips</h1>
+					<ul>
+						<li>Don't Wear shoe to Pagoda.</li>
+						<li>Use local currency</li>
+						<li>Take money out at the atm</li>
+						<li>Apply for a myanmar evisa online</li>
+						<li>Buy a local myanmar sim card</li>
+						<li>Avoid night buses</li>
+					</ul>
+				</div>
+
+				<div class="col-md-4">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<!-- Footer -->
+	<div class="footer">
+		<p>Copyright © to Htet Wai Yan Soe 2016 - 2017</p>
+	</div>
 </body>
 </html>
