--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 			<li><a href="travel-tips.html">Travelling Tips</a></li>
 		</ul>
 	</div>
-
+	
 	<!-- Content -->
 	<div class="content">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8">
+					<h1>Home</h1>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
